chore: update grammar

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,5 +20,10 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '18'
+      - name: Delete bindings on windows
+        run: |
+          if [ $RUNNER_OS == 'Windows' ]; then
+            del binding*
+          fi
       - run: npm install
       - run: npm test
