--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
+        os: [macos-latest, ubuntu-latest]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
@@ -20,10 +20,20 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '18'
-      - name: Delete bindings on windows
-        run: |
-          if [ $RUNNER_OS == 'Windows' ]; then
-            del binding*
-          fi
+      - run: npm install
+      - run: npm test
+
+  test-windows:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+      - name: Delete files
+        run: del binding*
       - run: npm install
       - run: npm test
